services/budget-planner-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-budget-planner
spec:
  selector:
    app: app-budget-planner
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type : NodePort
