services/budget-planner-service/k8s/service_postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-budget-headless
spec:
  clusterIP: None
  selector:
    app: postgres-budget
  ports:
    - port: 5432
      targetPort: 5432
