services/budget-planner-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budget-planner-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/budget
            pathType: Prefix
            backend:
              service:
                name: service-budget-planner
                port:
                  number: 8080
          - path: /api/v1/expense
            pathType: Prefix
            backend:
              service:
                name: service-budget-planner
                port:
                  number: 8080
          - path: /api/v1/finance
            pathType: Prefix
            backend:
              service:
                name: service-budget-planner
                port:
                  number: 8080
